ViTables ChangeLog
==================
** August 15, 2009 **
Splash screen has been updated.

** August 13, 2009 **
Icons have been updated. About ViTables dialog enhanced with a Thanks To page.

Fixed a bug introduced when the use of Qt resources was dropped.

** August 07, 2009 **
Makefile files and other unneeded stuff have been removed.

** August 06, 2009 **
The plugins framework has been made more robust.

Fixed some small problems in the new build system.

** August 05, 2009 **
Last 2 commits backed out + Dima's patches merged + backed out commits restored

** July 29, 2009 **
Added support for packages to the plugins framework.

** July 28, 2009 **
A simple plugin framework has been implemented.

** July 21, 2009 **
The "Node properties" dialog is generated automatically (via Qt Designer) now.

** May 01, 2009 **
Added missing licensing information to several files.

Sources of Users Guide are now distributed in the ViTables tarball.

Procedure for generating the usersguide has been updated.

INSTALL.txt and setup.py have been updated.

HTML documentation uses utf-8 encoding now.

** March 11, 2009 **
Code for creating DBDoc objects was confusing and has been refactored.

Added a couple of (subtle) usability improvements.

** March 10, 2009 **
The Preferences subpackage has been updated.

Fixed a small bug in the "Select a file for opening" dialog.

** March 08, 2009 **
New utility function added to utils.py module.

Table queries are done in a separated execution thread now.

** March 05, 2009 **
The "New query" dialog is generated automatically (via Qt Designer) now.

** March 04, 2009 **
Some subpackages have been reorganised.

** March 02, 2009 **
__tr method has changed.

Attributes editing has been debugged and simplified.

Unneeded encoding/decoding of strings has been removed.

** March 01, 2009 **
The main menu bar has been reorganised.

** Feb 26, 2009 **
New feature added: export a dataset to plain text file with CSV format.
